# CoverUP

./: .gitignore  README.md  pyproject.toml
src/controller/: controller.py
src/model/: model.py
src/view/: custom_graphics_view.py  view.py
tests/: test_model.py  test_save_pdf.py  test_view.py
